fix: Horizontal scroll for code blocks
Fixes #57

--- a/content/assets/sass/main.scss
+++ b/content/assets/sass/main.scss
@@ -68,6 +68,7 @@
   --block: block;
   --both: both;
   --hidden: hidden;
+  --scroll: scroll;
 }
 
 body {
@@ -225,7 +226,17 @@ hr {
 
 code {
   font-family: var(--code-font);
-  font-size: var(--s-font);
+  font-size: var(--xs-font);
+}
+
+pre {
+  overflow-y: var(--scroll);
+  -ms-overflow-style: var(--none); /* IE and Edge */
+  scrollbar-width: var(--none); /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: var(--none);
+  }
 }
 
 .toc {
